Refactor WishlistDTO conversion to set primary product images dynamically
Updated WishlistService.convertToDto to populate each product's primary image
from the database within setImageForEachProduct method. This approach resolves
MultipleBagFetchException by avoiding simultaneous fetching of multiple bags
and ensures that only primary images are transiently assigned to products for
DTO conversion.